--- a/PNC/index.html
+++ b/PNC/index.html
@@ -28,8 +28,8 @@
 
         <div class="container">
             <section id="main_content">
-                <a href="./algorithm.html">Algorithm Stats</a>
-                <a href=".units.html">Unit Info</a>
+                <p><a href="./algorithm.html">Algorithm Stats</a></p>
+                <p><a href="./units.html">Unit Info</a></p>
             </section>
         </div>
     </body>
