--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -198,7 +198,7 @@
                             <td>56</td>    <!-- Special 2 Slot Main Stat -->
                             <td></td>    <!-- Special 2 Slot Sub Stat -->
                             <td>28</td>    <!-- Special 1 Slot Main Stat -->
-                            <td></td>    <!-- Special 1 Slot Sub Stat -->
+                            <td>33</td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
                         <tr>
                             <td>Percentage</td>
@@ -304,7 +304,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>16%</td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>9.6%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>8%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -622,6 +622,7 @@
                 </table>
                 <p>1 Slot Main Stat value is half of 2 Slot Main Stat value.</p>
                 <p>Orange Sub Stat value is 0.6x that of Orange Main Stat value, rounded down.</p>
+                <p>Can only get gold 1 slot substat through farming.</p>
             </section>
         </div>
     </body>
