--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -7,6 +7,7 @@
 
         <section id="downloads">
             <a href="/GFL" class="btn btn-gfl"><span class="icon"></span>Girls' Frontline</a>
+            <a href="/PNC" class="btn btn-pnc"><span class="icon"></span>Neural Cloud</a>
             <!-- Menu Buttons -->
         </section>
     </div>
