--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -132,6 +132,8 @@
                     <dt><a href="https://docs.google.com/document/d/1hdoD9i8gMUsdU22pncGw3o63_-pazXpq84hcvothAT4">/gfg/</a></dt>
 
                     <dt><a href="https://www.reddit.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0v36wf">u/pointblanksniper</a></dt>
+
+                    <dt><a href="https://old.reddit.com/r/girlsfrontline/comments/xd1ivo/weekly_commanders_lounge_september_13_2022/ioz9w4d/">u/thaurelia</a></dt>
                 </dl>
 
                 <a href="#focus" id="focus"><h1>What should I focus on as a beginner?</h1></a>
