--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -351,7 +351,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>12</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
