--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -157,7 +157,7 @@
                             <td rowspan="2">Physical DEF</td>
                             <td>Flat</td>
                             <td></td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>33</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Stability 2 Slot Main Stat -->
