--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -161,11 +161,11 @@
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Stability 2 Slot Main Stat -->
-                            <td></td>    <!-- Stability 2 Slot Sub Stat -->
+                            <td>33</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>28</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>33</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>28</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -196,7 +196,7 @@
                             <td>28</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>33</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>28</td>    <!-- Special 1 Slot Main Stat -->
                             <td>33</td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -211,7 +211,7 @@
                             <td>3.6%</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>7.2%</td>    <!-- Special 2 Slot Main Stat -->
-                            <td>4.3%</td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>3.3%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>3.6%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -320,7 +320,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>12</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
@@ -405,7 +405,7 @@
                             <td rowspan="2">Post-battle HP Regen</td>
                             <td>Flat</td>
                             <td></td>    <!-- Offense 2 Slot Main Stat -->
-                            <td></td>    <!-- Offense 2 Slot Sub Stat -->
+                            <td>432</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>720</td>    <!-- Stability 2 Slot Main Stat -->
