--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -207,7 +207,7 @@
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>7.2%</td>    <!-- Stability 2 Slot Main Stat -->
-                            <td>4.3%</td>    <!-- Stability 2 Slot Sub Stat -->
+                            <td>3.3%</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>3.6%</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>7.2%</td>    <!-- Special 2 Slot Main Stat -->
@@ -614,7 +614,7 @@
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>4%</td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>2.4%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>2%</td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
