--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -143,7 +143,7 @@
                             <td>12%</td>    <!-- Offense 2 Slot Main Stat -->
                             <td>7.2%</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td>6%</td>    <!-- Offense 1 Slot Main Stat -->
-                            <td></td>    <!-- Offense 1 Slot Sub Stat -->
+                            <td>7.2%</td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
@@ -413,7 +413,7 @@
                             <td>360</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
-                            <td></td>    <!-- Special 2 Slot Sub Stat -->
+                            <td>432</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
                             <td></td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
