--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -409,7 +409,7 @@
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>720</td>    <!-- Stability 2 Slot Main Stat -->
-                            <td></td>    <!-- Stability 2 Slot Sub Stat -->
+                            <td>432</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>360</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
