--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -271,7 +271,7 @@
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td>4.8%</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
-                            <td></td>    <!-- Stability 1 Slot Sub Stat -->
+                            <td>4.8%</td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>8%</td>    <!-- Special 2 Slot Main Stat -->
                             <td>4.8%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>4%</td>    <!-- Special 1 Slot Main Stat -->
@@ -621,7 +621,7 @@
                     </tbody>
                 </table>
                 <p>1 Slot Main Stat value is half of 2 Slot Main Stat value.</p>
-                <p>Orange Sub Stat value is 0.6x that of Orange Main Stat value, rounded down.</p>
+                <p>Orange Sub Stat value is 0.6x that of Orange 2 Slot Main Stat value, rounded down.</p>
                 <p>Can only get gold 1 slot substat through farming.</p>
             </section>
         </div>
