--- a/PNC/index.html
+++ b/PNC/index.html
@@ -30,6 +30,7 @@
             <section id="main_content">
                 <p><a href="./algorithm.html">Algorithm Stats</a></p>
                 <p><a href="./units.html">Unit Info</a></p>
+                <!-- google embed with dropdown -->
             </section>
         </div>
     </body>
