--- a/PNC/index.html
+++ b/PNC/index.html
@@ -37,17 +37,6 @@
         <title>PNC | Random Scraps</title>
     </head>
 
-    <style>
-        #googleframe {
-            aspect-ratio: 1/1;
-            width: 100%;
-        }
-
-        #googlesection {
-            border-style: inset;
-        }
-    </style>
-
     <body>
         <include src="/univasset/scripts/pageheader/header.html">"Anything related to GFL: Neural Cloud"</include>
 
@@ -56,15 +45,15 @@
                 <p><a href="./algorithm.html">Algorithm Stats</a></p>
                 <p><a href="./units.html">Unit Info</a></p>
 
-                <div id="googlesection">
+                <div style="border-style: inset;">
                     <select name="googlelinks" id="googlelinks" onchange="loadSheet(this)">
                         <option value="https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o/" selected>iana's Unit Rating & Teambuilding Spreadsheet</option>
                         <option value="https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4/">iana's Unit Rating & Teambuilding Spreadsheet(Mirror)</option>
                         <option value="https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU/">PNC Neural Cloud Projections</option>
                     </select>
-                    <input type="button" onclick="openSheet()">Source</input>
+                    <input type="button" onclick="openSheet()" style="float: right;">Source</input>
                     <br>
-                    <iframe id="googleframe"></iframe>
+                    <iframe id="googleframe" style="aspect-ratio: 1/1; width: 100%;"></iframe>
                 </div>
             </section>
         </div>
