--- a/PNC/index.html
+++ b/PNC/index.html
@@ -15,6 +15,8 @@
             window.openSheet = function() {
                 window.open(sheetURL);
             }
+
+            //create dropdown class
         </script>
 
         <meta charset='utf-8'>
@@ -46,7 +48,7 @@
                 <p><a href="./units.html">Unit Info</a></p>
 
                 <div style="border-style: inset;">
-                    <select name="googlelinks" id="googlelinks" onchange="loadSheet(this)">
+                    <select name="googlelinks" onchange="loadSheet(this)">
                         <option value="https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o/" selected>iana's Unit Rating & Teambuilding Spreadsheet</option>
                         <option value="https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4/">iana's Unit Rating & Teambuilding Spreadsheet(Mirror)</option>
                         <option value="https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU/">PNC Neural Cloud Projections</option>
