--- a/PNC/index.html
+++ b/PNC/index.html
@@ -48,14 +48,14 @@
                 <p><a href="./units.html">Unit Info</a></p>
 
                 <div style="border-style: inset;">
-                    <select name="googlelinks" onchange="loadSheet(this)">
+                    <select name="googlelinks" onchange="loadSheet(this)" onload="loadSheet(this)">
                         <option value="https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o/" selected>iana's Unit Rating & Teambuilding Spreadsheet</option>
                         <option value="https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4/">iana's Unit Rating & Teambuilding Spreadsheet(Mirror)</option>
                         <option value="https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU/">PNC Neural Cloud Projections</option>
                     </select>
-                    <input type="button" onclick="openSheet()" style="float: right;">Source</input>
+                    <input type="button" onclick="openSheet()">Source</input>
                     <br>
-                    <iframe id="googleframe" style="aspect-ratio: 1/1; width: 100%;"></iframe>
+                    <iframe id="googleframe" style="aspect-ratio: 1/1; width: 100%; border: 0"></iframe>
                 </div>
             </section>
         </div>
