--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -192,7 +192,7 @@
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Stability 2 Slot Main Stat -->
-                            <td></td>    <!-- Stability 2 Slot Sub Stat -->
+                            <td>33</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>28</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Special 2 Slot Main Stat -->
