--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -182,7 +182,7 @@
                             <td>7.2%</td>    <!-- Special 2 Slot Main Stat -->
                             <td>4.3%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>3.6%</td>    <!-- Special 1 Slot Main Stat -->
-                            <td></td>    <!-- Special 1 Slot Sub Stat -->
+                            <td>4.3%</td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
                         <tr>
                             <td rowspan="2">Operand DEF</td>
