--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -190,7 +190,7 @@
                             <td></td>    <!-- Offense 2 Slot Main Stat -->
                             <td>33</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
-                            <td></td>    <!-- Offense 1 Slot Sub Stat -->
+                            <td>33</td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>56</td>    <!-- Stability 2 Slot Main Stat -->
                             <td>33</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>28</td>    <!-- Stability 1 Slot Main Stat -->
@@ -318,7 +318,7 @@
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
-                            <td></td>    <!-- Stability 1 Slot Sub Stat -->
+                            <td>12</td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
                             <td>12</td>    <!-- Special 2 Slot Sub Stat -->
                             <td></td>    <!-- Special 1 Slot Main Stat -->
