--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -3,50 +3,14 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
+            import {gdocDropdown} from '/univasset/scripts/externaljavascript.js';
+
             gdocDropdown(document.querySelector('#main_content div'),
                 ["iana's Unit Rating & Teambuilding Spreadsheet", "https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o"],
                 ["iana's Unit Rating & Teambuilding Spreadsheet(Mirror)", "https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4"],
                 ["PNC Neural Cloud Projections", "https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU"],
                 ["Algorithms", "https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU"]
             )
-
-            /** Creates a field for Google Sheets.
-             * @param {HTMLElement} grouperElem
-             * @param {[str, str][]} nameLinkPair [Name of Google Sheet, Link of Google Sheet ending in alphanumeric] */
-            function gdocDropdown(grouperElem, ...nameLinkPair) {
-                const selectElem = document.createElement('select');
-                const buttonElem = document.createElement('button');
-                const iframeElem = document.createElement('iframe');
-
-                grouperElem.style.borderStyle = 'inset';
-
-                selectElem.addEventListener('change', function() {
-                    iframeElem.src = this.selectedOptions[0].value + '/preview?pli=1';
-                })
-
-                buttonElem.textContent = 'Source';
-                buttonElem.style.float = 'right';
-                buttonElem.type = 'button';
-                buttonElem.addEventListener('click', function() {
-                    window.open(selectElem.selectedOptions[0].value);
-                })
-
-                iframeElem.style.aspectRatio = '1/1';
-                iframeElem.style.width = '100%';
-                iframeElem.style.border = '0';
-
-                for (const [name, link] of nameLinkPair) {
-                    const optionElem = document.createElement('option');
-                    optionElem.value = link;
-                    optionElem.textContent = name;
-                    selectElem.appendChild(optionElem);
-                }
-
-                for (const elements of [selectElem, buttonElem, document.createElement('br'), iframeElem])
-                    grouperElem.appendChild(elements);
-
-                iframeElem.src = selectElem.firstElementChild.value + '/preview?pli=1';
-            }
         </script>
 
         <meta charset='utf-8'>
