--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -83,7 +83,7 @@
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
                             <td></td>    <!-- Offense 1 Slot Sub Stat -->
                             <td>12%</td>    <!-- Stability 2 Slot Main Stat -->
-                            <td></td>    <!-- Stability 2 Slot Sub Stat -->
+                            <td>7.2%</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td>6%</td>    <!-- Stability 1 Slot Main Stat -->
                             <td></td>    <!-- Stability 1 Slot Sub Stat -->
                             <td></td>    <!-- Special 2 Slot Main Stat -->
