--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -461,7 +461,7 @@
                             <td>8%</td>    <!-- Special 2 Slot Main Stat -->
                             <td>4.8%</td>    <!-- Special 2 Slot Sub Stat -->
                             <td>4%</td>    <!-- Special 1 Slot Main Stat -->
-                            <td></td>    <!-- Special 1 Slot Sub Stat -->
+                            <td>4.8%</td>    <!-- Special 1 Slot Sub Stat -->
                         </tr>
                         <tr>
                             <td rowspan="2">Debuff Resistance</td>
