--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -6,15 +6,35 @@
             import {AsyncFunc, zip, enumerate} from '/univasset/scripts/externaljavascript.js';
 
             const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
-            var elite = new Set(), nonelite = new Set(), rows = "";
+            const template = document.createElement('template');
+            var elite = new Set(), nonelite = new Set();//, rows = "";
 
             for (const units of jsonObject)
                 (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
 
-            for (const [index, [unitE, unitNE]] of enumerate(zip(true, elite, nonelite)))
-                rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
+            for (const [index, [unitE, unitNE]] of enumerate(zip(true, elite, nonelite))) {
+                const trElem = document.createElement('tr');
 
-            document.getElementsByTagName('tbody')[0].innerHTML = rows;
+                const tdIndex = document.createElement('td');
+                tdIndex.textContent = index + 1;
+
+                const tdElite = document.createElement('td');
+                tdElite.textContent = unitE;
+
+                const tdNElite = document.createElement('td');
+                tdNElite.textContent = unitNE ?? '';
+
+                for (const elements of [tdIndex, tdElite, tdNElite])
+                    trElem.appendChild(elements);
+
+                template.appendChild(trElem);
+            }
+
+            document.querySelector('tbody').appendChild(template.content)
+
+            //rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
+
+            //document.getElementsByTagName('tbody')[0].innerHTML = rows;
         </script>
 
         <meta charset='utf-8'>
