--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -30,7 +30,7 @@
                 template.appendChild(trElem);
             }
 
-            document.querySelector('tbody').appendChild(template.content)
+            document.querySelector('tbody').appendChild(template.content.children)
 
             //rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
 
