--- a/PNC/units.html
+++ b/PNC/units.html
@@ -15,9 +15,9 @@
                 //reference
                 for (const [referenceName, link] of Object.entries(reference)) {
                     if (referenceName) {
-                        const a = document.createElement('a');
-                        a.textContent = referenceName;
-                        a.href = link;
+                        const a = document.createElement('a', {textContent: referenceName, href: link});
+                        //a.textContent = referenceName;
+                        //a.href = link;
 
                         const refs = document.createElement('dd');
                         refs.appendChild(a);
