--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -623,6 +623,7 @@
                 <p>1 Slot Main Stat value is half of 2 Slot Main Stat value.</p>
                 <p>Orange Sub Stat value is 0.6x that of Orange 2 Slot Main Stat value, rounded down.</p>
                 <p>Can only get gold 1 slot substat through farming.</p>
+                <p>Sub Stats per category are most likely the same.</p>
             </section>
         </div>
     </body>
