--- a/PNC/units.html
+++ b/PNC/units.html
@@ -15,7 +15,7 @@
                 //reference
                 for (const [referenceName, link] of Object.entries(reference)) {
                     if (referenceName) {
-                        const a = document.createElement('a', {textContent: referenceName, href: link});
+                        const a = document.createElement('a', {'textContent': referenceName, 'href': link});
                         //a.textContent = referenceName;
                         //a.href = link;
 
